--- a/Assets/LoveRead/_Scripts/TODO.txt
+++ b/Assets/LoveRead/_Scripts/TODO.txt
@@ -20,3 +20,13 @@
 7_red
 
 
+
+
+Body :
+
+1. https://i.imgur.com/TRuX05J.png
+2. https://i.imgur.com/TAa6Wk3.png
+3. https://i.imgur.com/JvzKGqG.png
+4. https://i.imgur.com/zyRPKT1.png
+5. https://i.imgur.com/2l25PAh.png
+
