--- a/Assets/LoveRead/_Scripts/TODO.txt
+++ b/Assets/LoveRead/_Scripts/TODO.txt
@@ -1,4 +1,7 @@
-﻿1. Caching main character body image
+﻿0.Checking hair color confimed
+1. Chapter algorithm
+
+2. Caching main character body image
 
 manage items which has mutliple url
 
