--- a/Assets/LoveRead/_Scripts/TODO.txt
+++ b/Assets/LoveRead/_Scripts/TODO.txt
@@ -1,12 +1,11 @@
-﻿>>Adding option for other character placement
->>Adding object of other character in serialized class
->>Importing Bale character and referencing it to the chapter class
->>Creating array of body and emotions for each other character
->>Removing unwanted variables from script
->>Adding screens of content in chapter
->>Adjusting other character position and scale
->>Defining required variable to start executing chapter
->>Adding last screen of X chapter
+﻿21-Oct
+Love Read - 2 hour
+>>Updating main character class body and face instance 
+>>Referencing lipsticks for first body type
+
+>>Implementing initial version for showing chapter screen
+>>Adding validation as per the screen type
+>>Finding suitable way of input for the next screen type of chapter
 
 1. Chapter algorithm
 
